[tool.poetry]
name = "vwarmup"
version = "0.1.0"
description = "Listen to events from the car to manage smart charging feature of charging box."
authors = ["stefur <stefan@furne.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
vwarmup = "vwarmup.main:main"

[tool.poetry.dependencies]
python = "^3.11"
weconnect = "^0.59.0"
pyeasee = "^0.7.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
